--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
 :root{
   --ink:#e9ebef; --muted:#a9adb6; --stroke:rgba(255,255,255,.08);
   --panel:rgba(20,20,24,.5);
-  --c-bio:#0f1115; --c-soolo:#151722; --c-teat:#1b1a1d;
-  --c-elek:#131a1a; --c-ytx:#101318;
 }
+/* vivid, still dark gradients per section */
+.bg-bio{ background: radial-gradient(1200px 600px at 10% 10%, #111827 0%, #0b1220 55%, #070b12 100%); }
+.bg-soolo{ background: radial-gradient(1200px 600px at 90% 10%, #1e1b4b 0%, #312e81 45%, #1a153a 100%); }
+.bg-teat{ background: radial-gradient(1200px 600px at 10% 90%, #3a0a0a 0%, #7f1d1d 38%, #2a0b0b 100%); }
+.bg-elek{ background: radial-gradient(1200px 600px at 90% 90%, #0b3a36 0%, #0e766e 40%, #072b29 100%); }
+.bg-ytx{ background: radial-gradient(1200px 600px at 50% 50%, #0f172a 0%, #0b1220 50%, #070b12 100%); }
+
 *{box-sizing:border-box}
 html,body{
   margin:0;height:100%;
   font-family:Inter,system-ui,sans-serif;
   color:var(--ink);
-  background:var(--c-bio);
-  transition:background-color .7s ease;
+  transition:background .7s ease;
 }
 .wrap{display:grid;grid-template-columns:260px 1fr;max-width:1400px;margin:0 auto;gap:20px;padding:20px}
 @media (max-width:900px){.wrap{grid-template-columns:1fr}}
@@ -29,18 +33,29 @@ html,body{
   color:var(--ink);text-decoration:none;font-weight:600;background:rgba(255,255,255,.05);transition:.2s
 }
 .cat:hover{background:rgba(255,255,255,.1)}
-.cat.active{outline:2px solid rgba(255,255,255,.25);background:rgba(255,255,255,.12)}
+.cat.active{outline:2px solid rgba(255,255,255,.25);background:rgba(255,255,255,.16)}
 
 .panel{
   background:var(--panel);border:1px solid var(--stroke);
   border-radius:12px;padding:18px;backdrop-filter:blur(8px);margin-bottom:20px
 }
 
-/* Hero */
-.hero{border-radius:12px;overflow:hidden;position:relative;height:min(48vh,520px)}
+/* Hero: guaranteed fill, no dark corners */
+.hero{
+  position:relative; border-radius:12px; overflow:hidden;
+  width:100%;
+  aspect-ratio: 16 / 9;   /* keeps consistent shape */
+  max-height: 60vh;       /* never too tall */
+  min-height: 280px;
+}
 .slide{position:absolute;inset:0;opacity:0;transition:opacity 1.2s ease-in-out}
 .slide.active{opacity:1}
-.slide img{position:absolute;inset:0;width:100%;height:100%;object-fit:cover}
+.slide img{
+  position:absolute;inset:0;
+  width:100%;height:100%;
+  object-fit:cover;object-position:center;
+  display:block;
+}
 
 /* Wavesurfer players */
 .ws-card{display:grid;gap:10px;padding:14px;border-radius:12px;border:1px solid var(--stroke);background:rgba(255,255,255,.04);margin-bottom:10px}
@@ -48,6 +63,7 @@ html,body{
 .ws-play{width:44px;height:44px;border-radius:10px;border:1px solid var(--stroke);background:rgba(255,255,255,.06);color:var(--ink);font-size:18px;cursor:pointer}
 .ws-wave{height:64px}
 .ws-time{font-variant-numeric:tabular-nums;opacity:.9}
+.ws-error{font-size:.9rem; opacity:.85; color:#ffd1d1}
 
 /* Embeds */
 .soolo-grid{display:grid;gap:16px}
@@ -59,16 +75,16 @@ html,body{
 .embed-spotify iframe{width:100%;height:152px}
 </style>
 </head>
-<body>
+<body class="bg-bio">
 
 <div class="wrap">
   <aside class="sidebar">
     <div class="side-grid">
-      <a class="cat" href="#bio"           data-cat="bio">Bio</a>
-      <a class="cat" href="#soolotuotanto" data-cat="soolotuotanto">Soolotuotanto</a>
-      <a class="cat" href="#teatteri"      data-cat="teatteri">Teatteri / Äänisuunnittelu</a>
-      <a class="cat" href="#elektroninen"  data-cat="elektroninen">Elektroninen / Kokeellinen</a>
-      <a class="cat" href="#yhteys"        data-cat="yhteys">Palvelut / Yhteystiedot</a>
+      <a class="cat active" href="#bio"           data-cat="bio">Bio</a>
+      <a class="cat"        href="#soolotuotanto" data-cat="soolotuotanto">Soolotuotanto</a>
+      <a class="cat"        href="#teatteri"      data-cat="teatteri">Teatteri / Äänisuunnittelu</a>
+      <a class="cat"        href="#elektroninen"  data-cat="elektroninen">Elektroninen / Kokeellinen</a>
+      <a class="cat"        href="#yhteys"        data-cat="yhteys">Palvelut / Yhteystiedot</a>
     </div>
   </aside>
 
@@ -89,12 +105,10 @@ html,body{
   </main>
 </div>
 
-<!-- Wavesurfer first -->
 <script src="https://unpkg.com/wavesurfer.js@7"></script>
-
 <script>
 document.addEventListener('DOMContentLoaded', () => {
-  /* ===== Slideshow (runs after DOM ready) ===== */
+  /* ===== Slideshow ===== */
   const slides = document.querySelectorAll('.slide');
   let idx = 0;
   if (slides.length) {
@@ -116,6 +130,7 @@ document.addEventListener('DOMContentLoaded', () => {
     <div class="ws-wave"></div>
     <div class="ws-time">0:00 / 0:00</div>
   </div>
+  <div class="ws-error" style="display:none"></div>
 </div>`
     );
   }
@@ -126,6 +141,24 @@ document.addEventListener('DOMContentLoaded', () => {
     return `${m}:${sec}`;
   };
 
+  // Preload duration via <audio> metadata so cards aren't "empty"
+  function prefetchDuration(card, url) {
+    const time = card.querySelector('.ws-time');
+    const err = card.querySelector('.ws-error');
+    const probe = new Audio();
+    probe.preload = 'metadata';
+    probe.src = url;
+    probe.addEventListener('loadedmetadata', () => {
+      time.textContent = `0:00 / ${fmtTime(probe.duration)}`;
+      // free the probe
+      probe.src = '';
+    });
+    probe.addEventListener('error', () => {
+      err.style.display = '';
+      err.textContent = '⚠️ Tiedostoa ei voitu ladata. Tarkista polku tai tiedoston nimi.';
+    });
+  }
+
   let wsInstances = [];
   function destroyPlayers(){ wsInstances.forEach(ws=>{ try{ws.destroy()}catch(e){} }); wsInstances=[]; }
 
@@ -135,7 +168,11 @@ document.addEventListener('DOMContentLoaded', () => {
       const btn=card.querySelector('.ws-play');
       const wave=card.querySelector('.ws-wave');
       const time=card.querySelector('.ws-time');
+      const err = card.querySelector('.ws-error');
       const url=card.dataset.file;
+
+      // show duration early
+      prefetchDuration(card, url);
 
       const ensureWS=()=>{
         if (ws) return ws;
@@ -153,6 +190,7 @@ document.addEventListener('DOMContentLoaded', () => {
         ws.on('audioprocess', onTick);
         ws.on('pause', ()=>{ btn.textContent='▶'; });
         ws.on('play',  ()=>{ btn.textContent='⏸'; });
+        ws.on('error', (e)=>{ err.style.display=''; err.textContent='⚠️ Soitin ei voinut avata tiedostoa.'; });
         return ws;
       };
 
@@ -241,29 +279,19 @@ document.addEventListener('DOMContentLoaded', () => {
     `
   };
 
-  /* ===== Backgrounds + nav highlight ===== */
-  const bgColors = {
-    bio: "var(--c-bio)",
-    soolotuotanto: "var(--c-soolo)",
-    teatteri: "var(--c-teat)",
-    elektroninen: "var(--c-elek)",
-    yhteys: "var(--c-ytx)"
+  /* ===== Background classes + nav highlight ===== */
+  const bgClass = {
+    bio:'bg-bio', soolotuotanto:'bg-soolo', teatteri:'bg-teat', elektroninen:'bg-elek', yhteys:'bg-ytx'
   };
+  function applyBg(cat){
+    document.body.classList.remove('bg-bio','bg-soolo','bg-teat','bg-elek','bg-ytx');
+    document.body.classList.add(bgClass[cat] || 'bg-bio');
+  }
 
   function renderFromHash() {
     const cat = (location.hash.replace('#','') || 'bio');
     if (!content[cat]) return;
     destroyPlayers();
     document.getElementById('content-area').innerHTML = content[cat];
-    document.body.style.background = bgColors[cat] || "var(--c-bio)";
     document.querySelectorAll('.cat').forEach(a =>
-      a.classList.toggle('active', a.dataset.cat === cat)
-    );
-    wirePlayers(document.getElementById('content-area'));
-  }
-  window.addEventListener('hashchange', renderFromHash);
-  renderFromHash(); // initial render
-});
-</script>
-</body>
-</html>
+      a.classList.toggle('active', a.dataset.ca
