--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   --ink:#e9ebef; --muted:#a9adb6; --stroke:rgba(255,255,255,.08);
   --panel:rgba(20,20,24,.5);
 }
-/* vivid, still dark gradients per section */
-.bg-bio{ background: radial-gradient(1200px 600px at 10% 10%, #111827 0%, #0b1220 55%, #070b12 100%); }
-.bg-soolo{ background: radial-gradient(1200px 600px at 90% 10%, #1e1b4b 0%, #312e81 45%, #1a153a 100%); }
-.bg-teat{ background: radial-gradient(1200px 600px at 10% 90%, #3a0a0a 0%, #7f1d1d 38%, #2a0b0b 100%); }
-.bg-elek{ background: radial-gradient(1200px 600px at 90% 90%, #0b3a36 0%, #0e766e 40%, #072b29 100%); }
-.bg-ytx{ background: radial-gradient(1200px 600px at 50% 50%, #0f172a 0%, #0b1220 50%, #070b12 100%); }
+/* vivid but tasteful gradients per section */
+.bg-bio  { background: radial-gradient(1200px 600px at 10% 10%,  #0f172a 0%, #0b1220 55%, #070b12 100%); }
+.bg-soolo{ background: radial-gradient(1200px 600px at 90% 10%,  #1f1d55 0%, #2f2aa6 45%, #1b1761 100%); }
+.bg-teat { background: radial-gradient(1200px 600px at 10% 90%,  #5b0d0d 0%, #8b1e1e 40%, #2a0b0b 100%); }
+.bg-elek { background: radial-gradient(1200px 600px at 90% 90%,  #0a3b37 0%, #128277 40%, #072b29 100%); }
+.bg-ytx  { background: radial-gradient(1200px 600px at 50% 50%,  #0f172a 0%, #0b1220 50%, #070b12 100%); }
 
 *{box-sizing:border-box}
 html,body{
@@ -42,256 +42,3 @@ html,body{
 
 /* Hero: guaranteed fill, no dark corners */
 .hero{
-  position:relative; border-radius:12px; overflow:hidden;
-  width:100%;
-  aspect-ratio: 16 / 9;   /* keeps consistent shape */
-  max-height: 60vh;       /* never too tall */
-  min-height: 280px;
-}
-.slide{position:absolute;inset:0;opacity:0;transition:opacity 1.2s ease-in-out}
-.slide.active{opacity:1}
-.slide img{
-  position:absolute;inset:0;
-  width:100%;height:100%;
-  object-fit:cover;object-position:center;
-  display:block;
-}
-
-/* Wavesurfer players */
-.ws-card{display:grid;gap:10px;padding:14px;border-radius:12px;border:1px solid var(--stroke);background:rgba(255,255,255,.04);margin-bottom:10px}
-.ws-row{display:grid;grid-template-columns:auto 1fr auto;gap:12px;align-items:center}
-.ws-play{width:44px;height:44px;border-radius:10px;border:1px solid var(--stroke);background:rgba(255,255,255,.06);color:var(--ink);font-size:18px;cursor:pointer}
-.ws-wave{height:64px}
-.ws-time{font-variant-numeric:tabular-nums;opacity:.9}
-.ws-error{font-size:.9rem; opacity:.85; color:#ffd1d1}
-
-/* Embeds */
-.soolo-grid{display:grid;gap:16px}
-.soolo-card .soolo-embeds{display:grid;gap:12px}
-@media (min-width:740px){ .soolo-card .soolo-embeds{grid-template-columns:1fr 1fr} }
-.embed{width:100%;border-radius:12px;overflow:hidden;border:1px solid var(--stroke);background:rgba(255,255,255,.04)}
-.embed-16x9{position:relative;padding-top:56.25%}
-.embed-16x9 iframe{position:absolute;inset:0;width:100%;height:100%}
-.embed-spotify iframe{width:100%;height:152px}
-</style>
-</head>
-<body class="bg-bio">
-
-<div class="wrap">
-  <aside class="sidebar">
-    <div class="side-grid">
-      <a class="cat active" href="#bio"           data-cat="bio">Bio</a>
-      <a class="cat"        href="#soolotuotanto" data-cat="soolotuotanto">Soolotuotanto</a>
-      <a class="cat"        href="#teatteri"      data-cat="teatteri">Teatteri / Äänisuunnittelu</a>
-      <a class="cat"        href="#elektroninen"  data-cat="elektroninen">Elektroninen / Kokeellinen</a>
-      <a class="cat"        href="#yhteys"        data-cat="yhteys">Palvelut / Yhteystiedot</a>
-    </div>
-  </aside>
-
-  <main id="main-content">
-    <!-- Slideshow -->
-    <section class="hero" id="hero">
-      <div class="slide active"><img src="images/Kuva 1.jpeg" alt=""></div>
-      <div class="slide"><img src="images/Kuva 2.jpeg" alt=""></div>
-      <div class="slide"><img src="images/Kuva 3.jpeg" alt=""></div>
-      <div class="slide"><img src="images/Kuva 4.jpeg" alt=""></div>
-      <div class="slide"><img src="images/Kuva 5.jpeg" alt=""></div>
-      <div class="slide"><img src="images/Kuva 6.jpeg" alt=""></div>
-      <div class="slide"><img src="images/Kuva 7.jpeg" alt=""></div>
-      <div class="slide"><img src="images/Kuva 8.jpeg" alt=""></div>
-    </section>
-
-    <div id="content-area"></div>
-  </main>
-</div>
-
-<script src="https://unpkg.com/wavesurfer.js@7"></script>
-<script>
-document.addEventListener('DOMContentLoaded', () => {
-  /* ===== Slideshow ===== */
-  const slides = document.querySelectorAll('.slide');
-  let idx = 0;
-  if (slides.length) {
-    setInterval(() => {
-      slides[idx].classList.remove('active');
-      idx = (idx + 1) % slides.length;
-      slides[idx].classList.add('active');
-    }, 7000);
-  }
-
-  /* ===== Helpers ===== */
-  function audioCard(file, title, folder) {
-    const url = encodeURI('audio/' + folder + '/' + file);
-    return (
-`<div class="ws-card" data-file="${url}">
-  <div><strong>${title}</strong></div>
-  <div class="ws-row">
-    <button class="ws-play" data-state="idle">▶</button>
-    <div class="ws-wave"></div>
-    <div class="ws-time">0:00 / 0:00</div>
-  </div>
-  <div class="ws-error" style="display:none"></div>
-</div>`
-    );
-  }
-  const fmtTime = s => {
-    if (!isFinite(s)) return "0:00";
-    const m = Math.floor(s/60);
-    const sec = Math.floor(s%60).toString().padStart(2,'0');
-    return `${m}:${sec}`;
-  };
-
-  // Preload duration via <audio> metadata so cards aren't "empty"
-  function prefetchDuration(card, url) {
-    const time = card.querySelector('.ws-time');
-    const err = card.querySelector('.ws-error');
-    const probe = new Audio();
-    probe.preload = 'metadata';
-    probe.src = url;
-    probe.addEventListener('loadedmetadata', () => {
-      time.textContent = `0:00 / ${fmtTime(probe.duration)}`;
-      // free the probe
-      probe.src = '';
-    });
-    probe.addEventListener('error', () => {
-      err.style.display = '';
-      err.textContent = '⚠️ Tiedostoa ei voitu ladata. Tarkista polku tai tiedoston nimi.';
-    });
-  }
-
-  let wsInstances = [];
-  function destroyPlayers(){ wsInstances.forEach(ws=>{ try{ws.destroy()}catch(e){} }); wsInstances=[]; }
-
-  function wirePlayers(scope=document){
-    scope.querySelectorAll('.ws-card').forEach(card=>{
-      let ws=null;
-      const btn=card.querySelector('.ws-play');
-      const wave=card.querySelector('.ws-wave');
-      const time=card.querySelector('.ws-time');
-      const err = card.querySelector('.ws-error');
-      const url=card.dataset.file;
-
-      // show duration early
-      prefetchDuration(card, url);
-
-      const ensureWS=()=>{
-        if (ws) return ws;
-        ws = WaveSurfer.create({
-          container: wave,
-          waveColor:'rgba(255,255,255,0.4)',
-          progressColor:'rgba(255,255,255,0.8)',
-          height:64, barWidth:2, barRadius:2, responsive:true,
-          url
-        });
-        wsInstances.push(ws);
-        ws.on('ready', ()=>{ time.textContent = `0:00 / ${fmtTime(ws.getDuration())}`; });
-        const onTick = (t)=>{ time.textContent = `${fmtTime(t)} / ${fmtTime(ws.getDuration())}`; };
-        ws.on('timeupdate', onTick);
-        ws.on('audioprocess', onTick);
-        ws.on('pause', ()=>{ btn.textContent='▶'; });
-        ws.on('play',  ()=>{ btn.textContent='⏸'; });
-        ws.on('error', (e)=>{ err.style.display=''; err.textContent='⚠️ Soitin ei voinut avata tiedostoa.'; });
-        return ws;
-      };
-
-      btn.addEventListener('click', ()=>{ ensureWS().playPause(); });
-    });
-  }
-
-  /* ===== Content ===== */
-  const content = {
-    bio: `
-      <section class="panel">
-        <h1>Niko Aaltonen</h1>
-        <p>Säveltäjä • äänisuunnittelija • monialainen taiteilija</p>
-        <p>Niko Aaltonen on säveltäjä, äänisuunnittelija ja monialainen taiteilija Turusta. Hänen taustansa musiikkituotannon ja teatterin parissa näkyy työssä, jossa yhdistyvät tunnelmalliset äänimaisemat ja vahva emotionaalinen syvyys. Niko luo musiikkia ja äänisuunnittelua, jotka kertovat tarinoita, herättävät muistoja ja tukevat esitysten visuaalista ja dramaturgista kokonaisuutta. Hänen äänimaailmansa liikkuvat klassisen musiikin, pop/rockin ja elektronisen kokeellisuuden välillä – rajoja pelottomasti rikkoen. Nikon musiikillinen polku alkoi jo nuorena, kun hän osti ensimmäisen kitaransa. Vuosien varrella hän on syventynyt intohimoisesti musiikin eri osa-alueisiin ja opiskellut laajasti useita genrejä ja soittimia, kuten bassoa, rumpuja ja laulua. Hän valmistui muusikoksi Turun konservatoriosta ja palveli tämän jälkeen Puolustusvoimien varusmiessoittokunnassa, josta hän valmistui aliupseerina. Tällä hetkellä Niko opiskelee huilunsoittoa Turun ammattikorkeakoulussa ja jatkaa musiikin tekemistä monipuolisesti eri muodoissa.</p>
-      </section>
-    `,
-    soolotuotanto: `
-      <section class="panel">
-        <h2>Soolotuotanto</h2>
-        <p>Valikoituja julkaisuja ja äänitteitä.</p>
-      </section>
-
-      <section class="soolo-grid">
-        <div class="soolo-card panel">
-          <h3>Julkaisu</h3>
-          <div class="soolo-embeds">
-            <div class="embed embed-spotify">
-              <iframe loading="lazy" src="https://open.spotify.com/embed/track/4xiEQA4enJbKFnzzgcbjqj" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture"></iframe>
-            </div>
-            <div class="embed embed-16x9">
-              <iframe loading="lazy" src="https://www.youtube.com/embed/Juo7VjB8-1w?rel=0&modestbranding=1" title="YouTube video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="panel">
-        <h3>Äänitteet</h3>
-        ${audioCard("Halusin Kertoo.mp3", "Halusin Kertoo", "soolotuotanto")}
-        ${audioCard("Taitelija.mp3", "Taitelija", "soolotuotanto")}
-      </section>
-    `,
-    teatteri: `
-      <section class="panel"><h2>Selli</h2>
-        ${audioCard("selli_2naytos6kohtaus.mp3", "Teeman huipennus", "teatteri_aanisuunnittelu")}
-        ${audioCard("selli_4naytos1kohtaus.mp3", "Järkensä menettänyt", "teatteri_aanisuunnittelu")}
-      </section>
-      <section class="panel"><h2>Mimmilehmän ja Variksen kesäpäivä laitumella</h2>
-        ${audioCard("Intromusa.mp3", "Intromusa", "teatteri_aanisuunnittelu")}
-        ${audioCard("Jännitys ja Skrätsi.mp3", "Jännitys ja Skrätsi", "teatteri_aanisuunnittelu")}
-        ${audioCard("Varis odottaa.mp3", "Varis odottaa", "teatteri_aanisuunnittelu")}
-        ${audioCard("39. Toka tanssi.mp3", "Toka tanssi", "teatteri_aanisuunnittelu")}
-        ${audioCard("Viimeinen tanssi.mp3", "Viimeinen tanssi", "teatteri_aanisuunnittelu")}
-      </section>
-      <section class="panel"><h2>Merituulet</h2>
-        ${audioCard("Merituulet.mp3", "Merituulet", "teatteri_aanisuunnittelu")}
-      </section>
-    `,
-    elektroninen: `
-      <section class="panel"><h2>Elektroninen / Kokeellinen</h2>
-        ${audioCard("1. Elämä on työ.mp3", "Elämä on työ", "elektroninen")}
-        ${audioCard("2. Isompikubeatles.mp3", "Isompikubeatles", "elektroninen")}
-        ${audioCard("3. Laskut.mp3", "Laskut", "elektroninen")}
-        ${audioCard("4. Oot Ruma.mp3", "Oot Ruma", "elektroninen")}
-        ${audioCard("5. Salaisestiseksikäs_instr.mp3", "Salaisestiseksikäs (instr.)", "elektroninen")}
-        ${audioCard("6. Dundun.mp3", "Dundun", "elektroninen")}
-      </section>
-    `,
-    yhteys: `
-      <section class="panel">
-        <h2>Palvelut / Yhteystiedot</h2>
-        <h3>Sävellys</h3>
-        <p>Teen sävellyksiä klassisesta musiikista teatteri- ja elokuvamusiikkiin sekä kokonaisiin ääniraitoihin — mihin tahansa projektiin, jonka haluat herättää eloon.</p>
-        <h3>Laulunkirjoitus</h3>
-        <p>Kirjoitan kappaleita popista, rockista ja metallista aina sooloartistien biitteihin asti. Älä epäröi pyytää myös muiden tyylilajien teoksia.</p>
-        <h3>Miksaus</h3>
-        <p>Miksaan kappaleesi tuoden siihen selkeyttä, syvyyttä ja viimeistellyn soinnin.</p>
-        <h3>Kitara-, basso- ja huilutunnit</h3>
-        <p>35€/h. Voimme luoda pitkäaikaisemman suunnitelman taitojesi kehittämiseksi tai keskittyä yksittäisiin ongelmiin, joissa koet olevasi jumissa.</p>
-        <h3>Sävellys- ja laulunkirjoitusopetus</h3>
-        <p>Mahdollista pyynnöstä!</p>
-        <h3>Yhteystiedot</h3>
-        <p>Puhelin: 045 110 7090 <em>(soitto, tekstiviesti, WhatsApp)</em><br>
-           Sähköposti: aaltonenniko989@gmail.com</p>
-      </section>
-    `
-  };
-
-  /* ===== Background classes + nav highlight ===== */
-  const bgClass = {
-    bio:'bg-bio', soolotuotanto:'bg-soolo', teatteri:'bg-teat', elektroninen:'bg-elek', yhteys:'bg-ytx'
-  };
-  function applyBg(cat){
-    document.body.classList.remove('bg-bio','bg-soolo','bg-teat','bg-elek','bg-ytx');
-    document.body.classList.add(bgClass[cat] || 'bg-bio');
-  }
-
-  function renderFromHash() {
-    const cat = (location.hash.replace('#','') || 'bio');
-    if (!content[cat]) return;
-    destroyPlayers();
-    document.getElementById('content-area').innerHTML = content[cat];
-    document.querySelectorAll('.cat').forEach(a =>
-      a.classList.toggle('active', a.dataset.ca
